--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper -->
 		<dependency>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-core</artifactId>
+			<version>1.3.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper</artifactId>
 			<version>5.1.4</version>
@@ -204,11 +210,6 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>redis.clients</groupId>
-			<artifactId>jedis</artifactId>
-			<version>2.9.0</version>
-		</dependency>
 
 	</dependencies>
 
@@ -225,20 +226,20 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-					<groupId>org.apache.maven</groupId>
-					<artifactId>maven-plugin-api</artifactId>
-					<version>3.5.3</version>
-				    <configuration>
-							<source>1.8</source>
-							<target>1.8</target>
-							<encoding>UTF-8</encoding>
-						<compilerArguments>
-							<extdirs>${project.basedir}/src/main/webapp/WEB-INF/lib</extdirs>
-						</compilerArguments>
-			 		</configuration>
+			<!--<plugin>-->
+					<!--<groupId>org.apache.maven</groupId>-->
+					<!--<artifactId>maven-plugin-api</artifactId>-->
+					<!--<version>3.5.3</version>-->
+				    <!--<configuration>-->
+							<!--<source>1.8</source>-->
+							<!--<target>1.8</target>-->
+							<!--<encoding>UTF-8</encoding>-->
+						<!--<compilerArguments>-->
+							<!--<extdirs>${project.basedir}/src/main/webapp/WEB-INF/lib</extdirs>-->
+						<!--</compilerArguments>-->
+			 		<!--</configuration>-->
 
-			</plugin>
+			<!--</plugin>-->
 		</plugins>
 	</build>
 
