--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,3 +3,11 @@ db.driverClass=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://120.78.65.177:3306/mmall?characterEncoding=utf-8
 db.username=root
 db.password=521521MaMa
+
+db.initialSize = 20
+db.maxActive = 50
+db.maxIdle = 20
+db.minIdle = 10
+db.maxWait = 10
+db.defaultAutoCommit = true
+db.minEvictableIdleTimeMillis = 3600000
