--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,11 +1,11 @@
 
-ftp.server.ip=你的FTP服务器ip地址
-ftp.user=mmallftp
-ftp.pass=ftppassword
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.ip=120.78.65.177
+ftp.user=root
+ftp.pass=521521MaMa
+stpt.server.prefix=https://www.mrsssswan.club/
 
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+alipay.callback.url=https://www.mrsssswan.club/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
