--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 /target/
-<<<<<<< HEAD
-<<<<<<< HEAD
-
+/out/
 !.mvn/wrapper/maven-wrapper.jar
-
-
 
 ### STS ###
 
@@ -48,9 +44,6 @@
 
 /nbdist/
 
-=======
-=======
->>>>>>> 319770798c7ce1d95fcbbb1b1c2c241c5f673302
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
@@ -74,8 +67,5 @@
 /nbbuild/
 /dist/
 /nbdist/
-<<<<<<< HEAD
->>>>>>> b688ebfab920628eafa9c4ad1021c5673a1bae70
-=======
->>>>>>> 319770798c7ce1d95fcbbb1b1c2c241c5f673302
+
 /.nb-gradle/
