--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,21 +1,11 @@
-db.driverLocation=C:\\Users\\joewt\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.46\\mysql-connector-java-5.1.46.jar
+db.driverLocation=../tools/mysql-connector-java-5.1.46.jar
 db.driverClass=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://120.78.65.177:3306/mmall?characterEncoding=utf-8
 db.username=root
-<<<<<<< HEAD
-<<<<<<< HEAD
 db.password=newpassword
-=======
-db.password=521521MaMa
->>>>>>> b688ebfab920628eafa9c4ad1021c5673a1bae70
-=======
-db.password=521521MaMa
->>>>>>> 319770798c7ce1d95fcbbb1b1c2c241c5f673302
-
 db.initialSize = 20
 db.maxActive = 50
 db.maxIdle = 20
 db.minIdle = 10
-db.maxWait = 10
 db.defaultAutoCommit = true
 db.minEvictableIdleTimeMillis = 3600000
