--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.driverLocation=../tools/mysql-connector-java-5.1.46.jar
+db.driverLocation=mysql-connector-java-5.1.46.jar
 db.driverClass=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://120.78.65.177:3306/mmall?characterEncoding=utf-8
 db.username=root
